# test

./: CMakeLists.txt
inc/: APIS_CcuComm.h  APIS_Json.h  GBBMSComm.h  IncComType.h  ToolFunc.h  Type.h  base64.h  config.h  event_framework.h  ftp.h  http.h  list.h  log.h  message.h  mqtt.h  ocpp_chargeOrder.h  ocpp_chargingProfile.h  ocpp_configurationKey.h  ocpp_localAuthorization.h  package.h  websocket.h
lib/json-c-0.9-nuc970/lib/: libjson-c.so.5.2.0
lib/json-c-0.9-nuc970/lib/cmake/json-c/: json-c-targets-debug.cmake  json-c-targets.cmake
lib/libcurl/lib/: libcurl.la  libcurl.so.4.8.0
lib/libcurl/lib/pkgconfig/: libcurl.pc
lib/libevent/include/event2/: event-config.h
lib/libmodbus-3.1.6-nuc970/lib/: libmodbus.la
lib/libpaho-mqtt3/lib/: libpaho-mqtt3as.so.1
lib/libpaho-mqtt3as/lib/: libpaho-mqtt3cs.so.1.3.13
lib/openssl-1.1.0g-nuc970/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
lib/openssl-1.1.0g-nuc970/share/doc/openssl/html/man1/: CA.pl.html  asn1parse.html  c_rehash.html  ciphers.html  cms.html  dhparam.html  dsaparam.html  ec.html  ecparam.html  enc.html  engine.html  gendsa.html  genrsa.html  list.html  ocsp.html  openssl-ca.html  openssl-crl.html  openssl-crl2pkcs7.html  openssl-dsa.html  openssl-errstr.html  openssl-genpkey.html  openssl-nseq.html  openssl-passwd.html  openssl-pkcs12.html  openssl-pkey.html  openssl-pkeyparam.html  openssl-pkeyutl.html  openssl-req.html  openssl-rsautl.html  openssl-s_server.html  openssl-s_time.html  openssl-smime.html  openssl-spkac.html  openssl-ts.html  openssl.html  pkcs7.html  pkcs8.html  rand.html  rsa.html  s_client.html  (+6 more)
lib/openssl-1.1.0g-nuc970/share/doc/openssl/html/man3/: ASN1_ENUMERATED_get.html  ASN1_STRING_dup.html  ASN1_STRING_print_ex_fp.html  ASN1_TIME_adj.html  ASN1_TYPE_unpack_sequence.html  ASN1_generate_v3.html  BIO_f_null.html  (+346 more)
lib/openssl-1.1.0g-nuc970/share/man/man1/: CA.pl.1  c_rehash.1  ca.1  dhparam.1  ec.1  ecparam.1  enc.1  gendsa.1  genrsa.1  list.1  openssl-asn1parse.1  openssl-ciphers.1  openssl-cms.1  openssl-crl.1  openssl-crl2pkcs7.1  openssl-dsa.1  openssl-dsaparam.1  openssl-engine.1  openssl-errstr.1  openssl-genpkey.1  openssl-nseq.1  openssl-ocsp.1  openssl-pkcs12.1  openssl-pkcs8.1  openssl-pkeyparam.1  openssl-rsa.1  openssl-s_client.1  openssl-s_server.1  openssl-smime.1  openssl-ts.1  openssl-tsget.1  openssl.1  passwd.1  pkcs7.1  pkey.1  pkeyutl.1  rand.1  req.1  rsautl.1  s_time.1  (+7 more)
lib/openssl-1.1.0g-nuc970/share/man/man3/: ASN1_ENUMERATED_set_int64.3  ASN1_OBJECT_free.3  ASN1_STRING_data.3  ASN1_STRING_free.3  ASN1_TIME_diff.3  ASN1_TYPE_pack_sequence.3  ASN1_generate_nconf.3  ASN1_tag2str.3  ASYNC_WAIT_CTX_clear_fd.3  ASYNC_cleanup_thread.3  BF_ecb_encrypt.3  BIO_ADDRINFO_next.3  BIO_ADDR_service_string.3  BIO_f_base64.3  BIO_f_null.3  BIO_find_type.3  BIO_get_accept_port.3  BIO_get_init.3  BIO_get_read_request.3  BIO_hostserv_priorities.3  BIO_listen.3  BIO_meth_get_create.3  BIO_new.3  BIO_new_CMS.3  BIO_new_fd.3  BIO_new_file.3  BIO_new_mem_buf.3  BIO_new_socket.3  BIO_pending.3  BIO_read.3  BIO_s_null.3  BIO_set_callback_ex.3  BIO_set_cipher.3  BIO_set_conn_address.3  BIO_set_md.3  BIO_set_next.3  BIO_set_read_buffer_size.3  BIO_set_ssl_renegotiate_timeout.3  BIO_should_read.3  BIO_vsnprintf.3  (+355 more)
lib/openssl-1.1.0g-nuc970/share/man/man5/: config.5  x509v3_config.5
lib/openssl-1.1.0g-nuc970/share/man/man7/: crypto.7  ct.7  des_modes.7  evp.7  ssl.7  x509.7
lib/sqlite-3.33-nuc970/lib/: libsqlite3.la  libsqlite3.so.0.8.6
lib/sqlite-3.33-nuc970/lib/pkgconfig/: sqlite3.pc
lib/tslib-1.4-nuc970/lib/: libts-0.0.so.0  libts.la
lib/tslib-1.4-nuc970/lib/pkgconfig/: tslib-0.0.pc
lib/tslib-1.4-nuc970/lib/ts/: arctic2.la  collie.la  corgi.la  dejitter.la  h3600.la  input.la  linear.la  linear_h2200.la  mk712.la  pthres.la  ucb1x00.la  variance.la
src/: APIS_CcuComm.c  APIS_Json.c  CFG_prontocolinfo.c  GBBMSComm.c  IncComType.c  ToolFunc.c  base64.c  config.c  event_framework.c  ftp.c  http.c  list.c  log.c  main.c  message.c  mqtt.c  ocpp_chargeOrder.c  ocpp_chargingProfile.c  ocpp_configurationKey.c  ocpp_localAuthorization.c  package.c  websocket.c
(+7 files in other folders)
